--- a/confirmacao.html
+++ b/confirmacao.html
@@ -87,11 +87,10 @@
         <section id="hero-1" class="moduleHero style1">
             <div class="wrap grid">
                 <div class="text-box">
-                    <h1 class="hero-title">Parabéns!</h1>
-                    <h2>Você acaba de adquirir o Seguro de Acidentes Pessoais Categoria Individual. Seu acesso à apólice foi enviado no e-mail que você cadastrou. Obrigado pela confiança!</h2>
+                    <h1 class="hero-title">Cadastro realizado com sucesso!</h1>
+                    <h2>Parabéns! Você reservou seu lugar na Black Friday da IstoÉ.</h2>
                     <p>
-                        Confira no seu e-mail os próximos passos!<br>
-                        Caso ele não tenha chegado, não esqueça de verificar a pasta de spam. ;)</p>
+                        Confira em seu e-mail seu <strong>CUPOM DE DESCONTO da Singu</strong>, a maior plataforma <br>de serviços de beleza da América Latina!</p>
                     <div class="btn-wrap">
                         <a class="btn" href="javascript:void(0)">Acesse istoé na black friday</a>
                     </div>
