--- a/confirmacao.html
+++ b/confirmacao.html
@@ -92,7 +92,7 @@
                     <p>
                         Confira em seu e-mail seu <strong>CUPOM DE DESCONTO da Singu</strong>, a maior plataforma <br>de serviços de beleza da América Latina!</p>
                     <div class="btn-wrap">
-                        <a class="btn" href="javascript:void(0)">Acesse istoé na black friday</a>
+                        <a class="btn" href="https://istoe.com.br">Acesse istoé na black friday</a>
                     </div>
                 </div>
             </div>
